# slideflow-noncommercial

./: .gitmodules  LICENSE  README.md  setup.cfg  setup.py
slideflow_noncommercial/: __init__.py
slideflow_noncommercial/biscuit/: delong.py
slideflow_noncommercial/extractors/: __init__.py  gigapath.py  plip.py  uni.py  virchow  virchow2.py
slideflow_noncommercial/extractors/conch/: __init__.py  coca_model.py
slideflow_noncommercial/extractors/histossl/: __init__.py
slideflow_noncommercial/extractors/phikon/: __init__.py
