[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[versioneer]
VCS = git
style = pep440
versionfile_source = slideflow_noncommercial/_version.py
versionfile_build = slideflow_noncommercial/_version.py
tag_prefix = 
parentdir_prefix = slideflow-noncommercial-
